# swagger.json
@@ -455,12 +455,6 @@
   "components": {
     "schemas": {
       "EventSchema": {
-        "required": [
-          "title",
-          "startDate",
-          "endDate",
-          "usersIds"
-        ],
         "properties": {
           "title": {
             "type": "string"
@@ -471,9 +465,24 @@
           "endDate": {
             "type": "string"
           },
+          "reminders": {
+            "type": "array"
+          },
           "usersIds": {
             "type": "array"
           }
+        },
+        "required": [
+          "title",
+          "startDate",
+          "usersIds"
+        ],
+        "examples": {
+          "title": "Echographie n°3 !",
+          "startDate": "1605285140",
+          "usersIds": [
+            "5fbec6aea71e9a5d16e11037"
+          ]
         }
       },
       "Events": {
@@ -483,15 +492,11 @@
         }
       },
       "UserSchema": {
-        "required": [
-          "email",
-          "name"
-        ],
         "properties": {
           "id": {
             "type": "string"
           },
-          "name": {
+          "mobile": {
             "type": "string"
           },
           "email": {
@@ -509,6 +514,42 @@
           },
           "tokens": {
             "type": "array"
+          },
+          "profile": {
+            "properties": {
+              "isChild": {
+                "type": "boolean"
+              },
+              "name": {
+                "type": "string"
+              },
+              "gender": {
+                "type": "string"
+              },
+              "location": {
+                "type": "string"
+              },
+              "picture": {
+                "type": "string"
+              }
+            },
+            "required": [
+              "isChild",
+              "name"
+            ]
+          }
+        },
+        "required": [
+          "email",
+          "password"
+        ],
+        "examples": {
+          "mobile": "0033648347451",
+          "email": "1605285140",
+          "password": "bob",
+          "profile": {
+            "isChild": false,
+            "name": "Julie"
           }
         }
       },
